[package]
name = "poem-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.55"
poem-openapi = {version="2.0.26",features=["swagger-ui","rapidoc","redoc"]}
captcha = "0.0.9"
md5 = "0.7.0"
jsonwebtoken = "8"
serde = {version="1",features=["derive"]}
serde_json = "1"
fastdate = "0.1.36"
rbs = { version = "4.3"}
rbatis = { version = "4.3"}
rbdc-mysql={version="4.3"}
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
once_cell = "1.16.0"